// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries creates a clinic 1`] = `
Object {
  "data": Object {
    "createClinic": Object {
      "address": Object {
        "address": "test address",
        "city": "test city",
        "country": "test country",
        "province": "test province",
        "zipCode": "test zipCode",
      },
      "consultationFee": 500,
      "minimumSchedulingNoticeMins": 5,
      "name": "Test Clinic hehe",
      "roomNumber": "4",
      "slotDurationInMins": 3,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries deletes a clinic 1`] = `
Object {
  "data": Object {
    "deleteClinic": Object {
      "address": Object {
        "address": "2nd Floor, Plazuela Dos, Benigno Aquino Ave, Mandurriao",
        "city": "Iloilo City",
        "country": "Philippines",
        "province": "Iloilo",
        "zipCode": "5000",
      },
      "consultationFee": 600,
      "minimumSchedulingNoticeMins": 2880,
      "name": "Dr. Bruen's Express Clinic",
      "roomNumber": "",
      "slotDurationInMins": 90,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches created clinic 1`] = `
Object {
  "data": Object {
    "getClinic": Array [
      Object {
        "address": Object {
          "address": "Infante St., Molo",
          "city": "Iloilo City",
          "country": "Philippines",
          "province": "Iloilo",
          "zipCode": "5000",
        },
        "consultationFee": 650,
        "minimumSchedulingNoticeMins": 1440,
        "name": "Dr. Kub - Iloilo Doctor's Hospital",
        "roomNumber": "204 A",
        "slotDurationInMins": 30,
      },
      Object {
        "address": Object {
          "address": "Mandurriao",
          "city": "Iloilo City",
          "country": "Philippines",
          "province": "Iloilo",
          "zipCode": "5000",
        },
        "consultationFee": 735,
        "minimumSchedulingNoticeMins": 1440,
        "name": "Dr. Kub - Medicus",
        "roomNumber": "102",
        "slotDurationInMins": 45,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches existing clinic 1`] = `
Object {
  "data": Object {
    "getClinic": Array [
      Object {
        "address": Object {
          "address": "Brgy. Lawa-an",
          "city": "Roxas City",
          "country": "Philippines",
          "province": "Capiz",
          "zipCode": "5800",
        },
        "consultationFee": 700,
        "minimumSchedulingNoticeMins": 2880,
        "name": "Dr. Bruen - Capiz Doctor's Hospital",
        "roomNumber": "104",
        "slotDurationInMins": 15,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries updates a clinic 1`] = `
Object {
  "data": Object {
    "updateClinic": Object {
      "name": "WeByte Clinic!!",
      "roomNumber": "9",
      "uid": "9a7c8d91-f9d8-4274-a8b9-f2e56ce591f7",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries upserts a clinic 1`] = `
Object {
  "data": Object {
    "upsertClinic": Object {
      "address": Object {
        "address": "PARC REGENCY",
        "city": "PAVIA",
        "country": "PHILIPPINES",
        "province": "ILOILO",
        "uid": "9d204c76-6a1e-4527-adc7-dfe5f064ecd0",
        "zipCode": "5001",
      },
      "doctorClinicUid": "7170c9e9-0296-400c-9d15-122c01992c8c",
      "name": "Clinic number 117",
      "roomNumber": "5",
      "uid": "c27efa99-f36d-4c6f-a329-d8b4812eebf5",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
